Finessing nav on mobile and fixing img width issues in the ev map section

--- a/src/assets/scss/modules/_header.scss
+++ b/src/assets/scss/modules/_header.scss
@@ -10,8 +10,8 @@
 }
 
 .global-header {
-	@include container;
 	@include clearfix;
+	@include container;
 	@include medium-and-up {
 		height: 96px;
 	}
@@ -34,18 +34,19 @@
 .logo-main {
 	width: 100px;
 	height: 27px;
-	@include position(absolute, 17px null null 0);
+	float: left;
+	margin-top: 17px;
 	svg {
 		width: 100%;
 		height: 100%;
 	}
 	@include medium-and-up {
-		top: 30px;
+		margin-top: 30px;
 		width: 140px;
 		height: 38px;
 	}
 	@include large-and-up {
-		top: 22px;
+		margin-top: 22px;
 		width: 180px;
 		height: 49px;
 	}
